Pound -- history of user-visible changes. 2025-08-14
See the end of file for copying conditions.

Pound is a continuation of the software originally developed by
Robert Segall at Apsis GmbH, which was officially discontinued
on 2022-09-19.  See the README file for details.

Please send pound bug reports to <gray@gnu.org>

Version 4.17.90 (git)

* Emacs mode for editing pound configuration files

* Include statement accepts globbing patterns

* TBF statement

This is a conditional statement that implements token bucket filter.
Its arguments are: the id of the buffer (a string, subject to to
backreference expansion and request accessor interpretation), maximum
allowed rate (requests per second) and a burst size (number of
requests).  The statement evaluates to true if the token bucket accepts
the request and to false otherwise.

* New request accessor: remoteip

%[remoteip 0]  expands to the real originator IP;
%[remoteip 1]  expands to the IP determined from the X-Forwarded-For
               (or similar) header.

* Originator IP for ACL matching

By default, ACL statements match against the IP address from where the
request came.  It is now possible to use the originator address
determined from the X-Forwarded-For header.  To do so, use the
-forwarded optional keyword, e.g.:

   ACL -forwarded -file "acl.lst"

* Changes in log format specifications

** Expansion of %v changed

The %v specifier now expands to the host name used in the request, as
obtained from the "Host" header, with port specification removed.

If you want the old expansion (name of the listener that served the
request), use "%{listener}N".

** Support for new specifiers

 . %l            Reserved for future use.  Expands to dash.
 . %p            Port number of the listener that served the request.

** Built-in formats changed accordingly:

3, "vhost_combined"
   "%v:%p %a %l %u %t \"%r\" %s %b \"%{Referer}i\" \"%{User-Agent}i\""
4, "combined"